--- a/meli_challenge_v2.ipynb
+++ b/meli_challenge_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,59 +34,34 @@
    "source": [
     "\n",
     "La instancia de la ETL puede cargar datos de cualquier país, solo basta con escribir las iniciales del país.  \n",
-    "Tambien se puede usar data precargada para no descargar la data de la API (puede tardar hasta 1 hora), para esto hacer  \n",
+    "Tambien se puede usar data precargada para no descargar la data de la API (puede tardar hasta 1 hora), para esto debe descomprimir el raw_data.zip en ./raw_data/  \n",
     "preload_data = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instanciar la clase ETL con 'col' como country_name\n",
     "etl = ETL(country_name='col')\n",
-    "preload_data = True\n",
+    "preload_data = False\n",
     "# Ruta para guardar los resultados\n",
     "output_dir = './output'\n",
-    "output_file = os.path.join(output_dir, 'data.csv')"
+    "output_file = os.path.join(output_dir, 'data.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cargando datos de items desde './raw_data/raw_items.csv'...\n",
-      "Columna 'id' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'title' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'condition' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'thumbnail_id' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'catalog_product_id' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'listing_type_id' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'permalink' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'buying_mode' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'site_id' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'category_id' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'domain_id' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'thumbnail' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'currency_id' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'official_store_name' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'stop_time' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'category_name' no contiene diccionarios representados como cadenas.\n",
-      "Cargando datos de vendedores desde './raw_data/raw_sellers.csv'...\n",
-      "Columna 'nickname' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'country_id' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'user_type' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'site_id' no contiene diccionarios representados como cadenas.\n",
-      "Columna 'permalink' no contiene diccionarios representados como cadenas.\n",
-      "Combinando datos de items, vendedores y categorías...\n",
-      "Pipeline ejecutado con éxito.\n",
-      "Datos finales guardados en './output\\data.csv'.\n"
+      "Extrayendo datos de items desde la API...\n"
      ]
     }
    ],
